RESOLVED FIXED18148
REGRESSION(r31246): Cairo backend build broken
https://bugs.webkit.org/show_bug.cgi?id=18148
Summary REGRESSION(r31246): Cairo backend build broken
Brent Fulgham
Reported 2008-03-27 10:04:42 PDT
Changes in r31246 to GraphicsContext were not carried over to the Cairo version, resulting in a broken build. * Changes to GraphicsContextCGWin.cpp were not made to GraphicsContextCairoWin.cpp (specifically the changes to the method signatures for getWindowsContext and releaseWindowsContext. Some analog to the new 'createPathForGlyph' may be necessary, but it is not immediately obvious to me how this should work with Cairo.
Attachments
Correct build regression (2.47 KB, patch)
2008-03-27 11:04 PDT, Brent Fulgham
mjs: review+
Brent Fulgham
Comment 1 2008-03-27 11:04:51 PDT
Created attachment 20129 [details] Correct build regression Patch to correct build regression due to change in GraphicsContext method signature changes.
Maciej Stachowiak
Comment 2 2008-03-28 10:15:05 PDT
Comment on attachment 20129 [details] Correct build regression r=me
Julien Chaffraix
Comment 3 2008-03-31 14:51:23 PDT
Closing bug as it has been committed in r31403.
Note You need to log in before you can comment on or make changes to this bug.