2008-03-28  Brent Fulgham  <bfulgham@gmail.com>

Reviewed by Maciej, landed by Brady

        Correct build regression (http://bugs.webkit.org/show_bug.cgi?id=18148)

        * platform/graphics/win/GraphicsContextCairoWin.cpp:
        (WebCore::GraphicsContext::getWindowsContext):
        (WebCore::GraphicsContext::releaseWindowsContext):



Canonical link: https://commits.webkit.org/25056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31403 268f45cc-cd09-0410-ab3c-d52691b4dbfc